--- a/package.json
+++ b/package.json
@@ -7,11 +7,7 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"babel-eslint": "^7.2.1",
-		"eslint-config-xo-react": "^0.11.1",
-		"eslint-plugin-flowtype": "^2.30.4",
 		"eslint-plugin-react": "^6.10.3",
-		"flow-bin": "0.40.0",
 		"immutable": "^3.8.1",
 		"lodash": "^4.17.4",
 		"react": "16.0.0-alpha.6",
@@ -24,14 +20,18 @@
 		"redux-persist": "^4.6.0",
 		"redux-persist-immutable": "^4.2.0",
 		"redux-persist-transform-immutable": "^4.2.0",
-		"redux-thunk": "^2.2.0",
-		"xo": "^0.18.1"
+		"redux-thunk": "^2.2.0"
 	},
 	"devDependencies": {
+		"babel-eslint": "^7.2.1",
 		"babel-jest": "19.0.0",
 		"babel-preset-react-native": "1.9.1",
+		"eslint-config-xo-react": "^0.11.1",
+		"eslint-plugin-flowtype": "^2.30.4",
+		"flow-bin": "0.40.0",
 		"jest": "19.0.2",
-		"react-test-renderer": "16.0.0-alpha.6"
+		"react-test-renderer": "16.0.0-alpha.6",
+		"xo": "^0.18.1"
 	},
 	"jest": {
 		"preset": "react-native"
@@ -54,8 +54,7 @@
 		"space": 4,
 		"semicolon": false,
 		"plugins": [
-			"flowtype",
-			"react"
+			"flowtype"
 		],
 		"rules": {
 			"react/forbid-component-props": [
