--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
 		"eslint-plugin-react": "^6.10.3",
 		"immutable": "^3.8.1",
 		"lodash": "^4.17.4",
+		"native-base": "^2.1.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.2",
-		"react-native-elements": "^0.10.3",
-		"react-navigation": "^1.0.0-beta.7",
+		"react-navigation": "git+https://github.com/react-community/react-navigation.git",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
 		"redux-logger": "^3.0.1",
@@ -77,6 +77,10 @@
 			],
 			"react/jsx-space-before-closing": [
 				0
+			],
+			"react/jsx-closing-bracket-location": [
+				1,
+				"tag-aligned"
 			]
 		}
 	}
