--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"native-base": "^2.1.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.2",
+		"react-native-keychain": "^1.2.0",
 		"react-navigation": "git+https://github.com/react-community/react-navigation.git",
 		"react-redux": "^5.0.3",
 		"redux": "^3.6.0",
